crates/ruff_python_parser/tests/snapshots/invalid_syntax@function_def_missing_identifier.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/function_def_missing_identifier.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..31,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..11,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name(""),
                        range: 3..3,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 4..6,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    raises: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 8..11,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 8..11,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                    is_asserts_return: false,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 12..30,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name(""),
                        range: 15..15,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 16..18,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 22..25,
                                id: Name("int"),
                                ctx: Load,
                            },
                        ),
                    ),
                    raises: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 27..30,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 27..30,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                    is_asserts_return: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def (): ...
  |     ^ Syntax Error: Expected an identifier
2 | def () -> int: ...
  |


  |
1 | def (): ...
2 | def () -> int: ...
  |     ^ Syntax Error: Expected an identifier
  |
